--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
               src="assets/noakhali.png"
               class="max-w-sm rounded-lg shadow-2xl w-3/4 h-auto" />
             <div class="w-3/4">
-              <div class="stat flex p-3">
+              <div class="stat flex p-3 lg:justify-start justify-center">
                 <img class="w-4 h-4" src="assets/coin.png" alt="">
                 <div class="stat-value text-xs font-normal">0 BDT</div>
               </div>
-              <h1 class="text-sm font-bold">Donate for Flood at Noakhali, Bangladesh</h1>
-              <p class="py-4 text-xs font-light ">
+              <h1 class="text-sm font-bold text-center lg:text-left">Donate for Flood at Noakhali, Bangladesh</h1>
+              <p class="py-4 text-xs font-light text-center lg:text-left ">
                 The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
               </p>
               <div class="form-control ">
@@ -94,12 +94,12 @@
              src="assets/feni.png"
              class="max-w-sm rounded-lg shadow-2xl w-3/4 h-auto" />
            <div class="w-3/4">
-             <div class="stat flex p-3">
+             <div class="stat flex p-3 lg:justify-start justify-center">
                <img class="w-4 h-4" src="assets/coin.png" alt="">
                <div class="stat-value text-xs font-normal">0 BDT</div>
              </div>
-             <h1 class="text-sm font-bold">Donate for Flood Relief in Feni,Bangladesh</h1>
-             <p class="py-4 text-xs font-light ">
+             <h1 class="text-sm font-bold text-center lg:text-left">Donate for Flood Relief in Feni,Bangladesh</h1>
+             <p class="py-4 text-xs font-light text-center lg:text-left ">
                The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.
              </p>
              <div class="form-control ">
@@ -122,12 +122,12 @@
                src="assets/quota-protest.png"
                class="max-w-sm rounded-lg shadow-2xl w-3/4 h-auto " />
              <div class="w-3/4">
-               <div class="stat flex p-3">
+               <div class="stat flex p-3 lg:justify-start justify-center">
                  <img class="w-4 h-4" src="assets/coin.png" alt="">
                  <div class="stat-value text-xs font-normal">0 BDT</div>
                </div>
-               <h1 class="text-sm font-bold">Aid for Injured in the Quota Movement</h1>
-               <p class="py-4 text-xs font-light ">
+               <h1 class="text-sm font-bold text-center lg:text-left ">Aid for Injured in the Quota Movement</h1>
+               <p class="py-4 text-xs font-light text-center lg:text-left ">
                  The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.
                </p>
                <div class="form-control ">
