blog question answer section

--- a/blog.html
+++ b/blog.html
@@ -52,27 +52,27 @@
         <input type="radio" name="my-accordion-2" checked="checked" />
         <div class="collapse-title text-xl font-medium">What is the Document Object Model(DOM) ?</div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>DOM is a programming inter face that use in web document. it's represent the document as array like object. </p>
         </div>
       </div>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
         <div class="collapse-title text-xl font-medium">How do you select element from the DOM ?</div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>Basically use id name to select element from DOM</p>
         </div>
       </div>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
         <div class="collapse-title text-xl font-medium">what is event delegation in the context of the DOM , and why is it useful ?</div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>it is technique that provide event handler in parents,and this event used by their child elements.  </p>
         </div>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
         <div class="collapse-title text-xl font-medium">How do you  manipulate an element's attributes and styles using the DOM ? </div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>Dom has different type of method to change element's attributes and style. for example (variableName.attributesOrStyle = value) </p>
         </div>
       </div>
     
