responsive blog page

--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,8 @@
             </div>
           </div>
     </header>
-   <main class="ml-12 mt-12">
+   <main class="lg:ml-12 mt-12 w-3/4 mx-auto">
+
     <h1 class="font-extrabold text-2xl"> Important FAQ</h1>
 
     <div class="collapse collapse-arrow bg-base-200 ">
